--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,13 @@
     transform: rotate(360deg);
   }
 }
+
+
+.NavBar {
+  display: flex;
+  flex-direction: row;
+}
+
+a.active {
+  color: rgb(231, 102, 33);
+}
