--- a/src/App.css
+++ b/src/App.css
@@ -58,3 +58,10 @@ a.active {
   padding: 5px;
   width: 700px;
 }
+
+.dishes-picture-small {
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  padding: 5px;
+  width: 150px;
+}
