--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,20 @@
 .App {
+  padding-top: 3rem;
+    padding-bottom: 1rem;
+    margin-bottom: 0;
   text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+  background-image: url("https://randallbeans.com/wp-content/uploads/2012/01/faded.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  
 }
+
+
+
+
 
 .App-logo {
   height: 40vmin;
@@ -26,7 +40,7 @@
 
 
 #loggedin {
-  font-size: 7px;
+  font-size: 20px;
 }
 
 .App-link {
@@ -51,6 +65,11 @@
 
 a.active {
   color: rgb(231, 102, 33);
+
+}
+
+a:hover {
+color: plum;
 }
 
 .dish-picture {
@@ -65,4 +84,12 @@ a.active {
   border-radius: 4px;
   padding: 5px;
   width: 150px;
+  display: inline-flexbox;
+}
+
+
+.NavBar{
+  text-shadow: lightslategrey;
+  font-size: 180%;
+  color: rgb(78, 78, 69);
 }
