--- a/src/App.css
+++ b/src/App.css
@@ -38,8 +38,22 @@
 
 
 
+.center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 600px;
+  border: 3px solid green;
+}
 
-
+.card {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  height: 800px;
+  border: 3px solid green;
+}
 
 
 .dish-picture {
